# cpp.qt.notes

./: .gitignore  CMakeLists.txt  CppTest.sln  Program.cs  README.md  TODO.md  build.sh  configure.sh  debian-setup.sh  qmake.pro  window-setup.ps1
CppTest/: CppTest.vcxproj  CppTest.vcxproj.filters  base64.cpp  base64.hpp  main.cpp  thread.cpp  thread.hpp
cpp/: base64.hpp  main.cpp  qt.cpp
cpp/vs/CppTest/: CppTest.vcxproj  CppTest.vcxproj.filters
cs/: Program.cs
gnome/: build.sh  cross-compile.sh  cross.meson  debian-setup.sh  meson.build  windows-setup.sh
gnome/src/: main.cpp  meson.build
gnome/subprojects/: gtk.wrap
src/: filesystem.cpp  main.cpp  network.cpp
vs/: Notes.sln
vs/Notes/: Notes.vcxproj
